[package]
name = "collabori"
version = "0.1.0"
authors = ["Alessandro Sappia <a.sappia@gmail.com>"]
edition = "2021"
description = "A real-time collaborative editing engine using CRDTs and OT."
license = "MIT"
repository = "https://github.com/asappia/collabori"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4"] }
futures-util = "*"
url = "*"

[dev-dependencies]
criterion = "*"
cargo-tarpaulin = "*"

[[bench]]
name = "benchmark"
harness = false
